--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "Una pagina web de viajes creada con el framework de css, tailwind, la cual cuenta con diseño responsive.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tw:build": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
   },
   "author": "Adriana Barrera",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "tailwindcss": "^3.3.3"
+  }
 }
